cmake_minimum_required(VERSION 3.30.4)
project(myproject LANGUAGES C VERSION 1.0)  
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.c")
file(GLOB_RECURSE HEADERS "${CMAKE_SOURCE_DIR}/inc/*.h")
message("hello\n")
include_directories(${HEADERS})
add_executable(main ${SOURCES})